# rccgen

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: compiler.rs  json_writer.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  validation.rs
tests/: integration_test.rs
